--- a/modules/ROOT/pages/experience.adoc
+++ b/modules/ROOT/pages/experience.adoc
@@ -24,7 +24,7 @@
 <p style="font-size:.7rem;color:var(--dim);font-family:'DM Mono',monospace;margin-bottom:.5rem">Spain · unith.ai · Jan 2023 — Jul 2024 (1 yr 7 mo)</p>
 ++++
 
-*Engineering Team Lead*
+*Lead Developer*
 
 * Led a *5-person team* (backend + frontend) from MVP to production-ready platform.
 * Designed microservice architecture on NestJS + RabbitMQ + AWS with horizontal scaling.
