--- a/ru/modules/ROOT/nav.adoc
+++ b/ru/modules/ROOT/nav.adoc
@@ -2,5 +2,5 @@
 * xref:experience.adoc[Опыт работы]
 * xref:career.adoc[Карьера]
 * xref:skills.adoc[Навыки]
-* xref:open_source_projects.adoc[Open Source проекты]
+* xref:projects.adoc[Проекты]
 * xref:education.adoc[Образование]
