--- a/en/modules/ROOT/pages/skills.adoc
+++ b/en/modules/ROOT/pages/skills.adoc
@@ -4,7 +4,7 @@
 `TypeScript` `Node.js` `NestJS` `Fastify` `PHP` `Laravel` `Java Spring` `Spring Boot`
 
 == Databases
-`PostgreSQL` `PostGIS` `Redis` `ElasticSearch` `Redshift` `MySQL`
+`PostgreSQL` `PostGIS` `Pgvector` `Redis` `ElasticSearch` `Redshift` `MySQL`
 
 == Message Brokers
 `RabbitMQ` `Apache Kafka` `NATS`
