--- a/ru/modules/ROOT/pages/experience.adoc
+++ b/ru/modules/ROOT/pages/experience.adoc
@@ -70,7 +70,7 @@
 * Инициирование и реализация гео-сервиса (скрейпинг + карты криптоматов на базе PostGIS), ставшего самостоятельным продуктом.
 * Документирование архитектуры и требований (C4 model, UML, Confluence); выстраивание коммуникации в распределённой команде.
 
-`PHP 7.4` `Laravel` `Apache Kafka` `PostgreSQL` `PostGIS` `AWS` `Redis` `ReactJS` `Node.js`
+`PHP 7.4` `Laravel` `Apache Kafka` `PostgreSQL` `PostGIS` `AWS` `Redis` `ReactJS` `Node.js` `AML/KYC`
 
 ---
 
